@@ -1,10 +1,5 @@
 Routines missing from eglib, by count number:
 
-    812 g_print
-    554 g_message
-    392 g_strdup_printf
-    280 g_warning
-    192 g_error
     148 g_string_append
     103 g_string_sprintfa
      82 g_list_prepend
@@ -17,7 +12,6 @@ Routines missing from eglib, by count number:
      36 g_ptr_array_index
      34 g_strconcat
      31 g_string_append_printf
-     30 g_new
      29 g_getenv
      28 g_module_symbol
      28 g_list_append
@@ -42,7 +36,6 @@ Routines missing from eglib, by count number:
      12 g_build_path
      11 g_module_open
      11 g_file_test
-     11 g_critical
      10 g_strlcpy
      10 g_slist_append
      10 g_path_get_dirname
@@ -74,7 +67,6 @@ Routines missing from eglib, by count number:
       5 g_dir_open
       5 g_ascii_strcasecmp
       4 g_unsetenv
-      4 g_try_malloc
       4 g_strdown
       4 g_slist_length
       4 g_get_tmp_dir
@@ -94,7 +86,6 @@ Routines missing from eglib, by count number:
       3 g_file_open_tmp
       3 g_dir_read_name
       3 g_dir_close
-      3 g_debug
       3 g_convert
       3 g_array_new
       3 g_array_free
@@ -125,8 +116,6 @@ Routines missing from eglib, by count number:
       2 g_markup_parse_context_free
       2 g_markup_parse_context_end_parse
       2 g_logv
-      2 g_log_set_fatal_mask
-      2 g_log_set_always_fatal
       2 g_list_sort
       2 g_list_index
       2 g_get_current_time
@@ -140,7 +129,6 @@ Routines missing from eglib, by count number:
       2 g_array_append_val
       2 g_alloca
       1 g_win32_getlocale
-      1 g_try_realloc
       1 g_timer_destroy
       1 g_strjoin
       1 g_string_truncate
@@ -194,7 +182,6 @@ Macros:
     124 G_GNUC_PRETTY_FUNCTION
      40 G_GSIZE_FORMAT
      40 G_GNUC_UNUSED
-     31 G_LOG_LEVEL_INFO
      20 G_LITTLE_ENDIAN
      16 G_DIR_SEPARATOR_S
      12 G_BREAKPOINT
@@ -202,20 +189,16 @@ Macros:
      10 G_STMT_START
      10 G_STMT_END
       9 G_GUINT64_FORMAT
-      7 G_LOG_LEVEL_DEBUG
       7 G_FILE_TEST_IS_DIR
       6 G_UNLIKELY
       6 G_HASH_TABLE_RESIZE
       6 G_DIR_SEPARATOR
       5 G_UNLOCK
-      5 G_LOG_LEVEL_WARNING
-      5 G_LOG_LEVEL_ERROR
       5 G_LOCK
       4 G_LIKELY
       4 G_GNUC_NORETURN
       4 G_FILE_TEST_IS_REGULAR
       3 G_SEARCHPATH_SEPARATOR_S
-      3 G_LOG_LEVEL_MESSAGE
       2 G_USEC_PER_SEC
       2 G_STRLOC
       2 G_IO_NVAL
